# e2protobuf

./: .gitignore  .gitmodules  CMakeLists.txt  E2_requests.h  README.md  README.txt  e2_client_api.c  e2_client_api.h  e2term_emu.c  gnb_connector.c  gnb_connector.h  gnb_e2_emu.c  gnb_e2server_emu.c  gnb_message_handlers.c  gnb_message_handlers.h  simple.c
common/: e2prtbf_common.c  e2prtbf_common.h
proto/: e2.options  e2.pb-c.c  e2.pb-c.h  e2.pb.h  e2.proto
proto/old/: e2.pb-c.c  e2.pb-c.h  e2.proto
